--- a/style.css
+++ b/style.css
@@ -227,11 +227,20 @@ section {
 
 
 /* Contact */
-#contact-form input, #contact-form textarea {
+#contact-form input, 
+#contact-form textarea {
     width: 80%;
     padding: 10px;
     margin: 10px 0;
     box-sizing: border-box;
+}
+#contact-form label {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 80%;
+  margin: 10px auto;
+  color: white;
 }
 #contact-form button {
 width: 80%;
